# DetroUI

./: .gitignore  README.md  main.js  package-lock.json  package.json  preload.js  tauri-errors.txt
.opencode/plans/: fix-8-high-priority.md
src/: index.html  ipc-handlers.js  tauri-bridge.js
src-tauri/: Cargo.toml  index.html  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: commands.rs  lib.rs  main.rs  store.rs  virtual_desktop.rs  wallpaper.rs
src/desktop/: index.html
src/launcher/: index.html
src/settings/: index.html  renderer.js  style.css
src/shared/: init-drag.js  widget-dragger.css  widget-dragger.js
src/taskbar/: index.html  renderer.js  style.css
src/wallpaper/: index.html  windows-desktop.js
src/widgets/clock/: index.html
src/widgets/music-player/: index.html
src/widgets/notes/: index.html
src/widgets/system-monitor/: index.html
src/widgets/weather/: index.html
